# tektite-cc-migration-service

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  NEWBOLD.md  README.md
.github/: dependabot.yml
.github/workflows/: deploy.yml
ui/: Cargo.toml
ui/assets/styling/: client_registration.css  input_entry.css  migration_service.css
ui/src/: lib.rs
ui/src/app/: migration_service.rs  mod.rs
ui/src/components/: inputs.rs  mod.rs
ui/src/components/display/: blob_progress_display.rs  loading_indicator.rs  mod.rs  provider_display.rs  video_accordion.rs
ui/src/components/forms/: captcha_gate.rs  domain_selector.rs  login_form.rs  login_form_client.rs  migration_details_form.rs  mod.rs  pds_selection_form.rs  plc_verification_form.rs
ui/src/components/input/: mod.rs  validated_input.rs  validation_feedback.rs
ui/src/components/layout/: mod.rs
ui/src/features/migration/: form_validation.rs  logic.rs  mod.rs  orchestrator.rs  storage.rs  types.rs
ui/src/features/migration/progress/: events.rs  metrics.rs  mod.rs  reporter.rs
ui/src/features/migration/resume/: mod.rs  resume_handlers.rs
ui/src/features/migration/steps/: blob.rs  mod.rs  plc.rs  preferences.rs  repository.rs
ui/src/migration/: account_operations.rs  form_validation.rs  logic.rs  logic_backup.rs  mod.rs  orchestrator.rs  resume_handlers.rs  session_management.rs  storage.rs  types.rs  validation.rs
ui/src/migration/progress/: events.rs  mod.rs  reporter.rs
ui/src/migration/steps/: blob.rs  plc.rs  preferences.rs  repository.rs
ui/src/services/: mod.rs
ui/src/services/blob/: README.md  blob_chunking.rs  blob_fallback_manager.rs  blob_idb_storage.rs  blob_manager_trait.rs  blob_migration.rs  blob_monitoring.rs  blob_opfs_storage.rs  blob_storage.rs  mod.rs
ui/src/services/blob/strategies/: README.md  concurrent_strategy.rs  concurrent_strategy_test.rs  mod.rs  selector.rs  storage_strategy.rs  strategy_trait.rs  streaming_strategy.rs
ui/src/services/client/: cid.rs  cursor_test.rs  dns_over_https.rs  errors.rs  identity_resolver.rs  mod.rs  pds_client.rs  session.rs  session_refresh.rs  types.rs
ui/src/services/client/api/: blob.rs  mod.rs  plc.rs  repo.rs
ui/src/services/client/auth/: account.rs  login.rs  mod.rs
ui/src/services/config/: README.md  mod.rs  storage_estimator.rs  unified_config.rs
ui/src/services/errors/: mod.rs
ui/src/services/streaming/: README.md  browser_storage.rs  errors.rs  implementations.rs  metrics.rs  mod.rs  orchestrator.rs  traits.rs  wasm_http_client.rs
ui/src/utils/: console_macros.rs  handle_suggestions.rs  mod.rs  platform.rs  serialization.rs  validation.rs
web/: Cargo.toml  Dioxus.toml  index.html
web/src/: main.rs
