[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
gloo-storage = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-console = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
base64 = "0.22"

#storage
opfs ={ version = "0.1.3", optional = true }
idb = "0.6.4"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Client-side HTTP and DNS - WASM compatible
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
async-trait = "0.1.89"
anyhow = "1.0"
lru = "0.16"
futures = "0.3"
futures-util = "0.3"

# Additional web APIs for enhanced client functionality
js-sys = "0.3"
web-sys = { version = "0.3", features = ["StorageManager", "Navigator", "Window", "Location"] }
tracing = "0.1"
thiserror = "2.0"
regex = "1.11"

# Conditional tokio features for WASM vs native
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47", features = ["macros", "sync"] }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# tokio = { version = "1.47", features = ["macros", "rt", "sync"] }

[features]
default = ["web"]
web = ["dep:opfs"]
