[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
gloo-storage = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-console = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
base64 = "0.22"

#storage
opfs = { version = "0.1.3" }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Client-side HTTP and DNS - WASM compatible
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "deflate"] }
async-trait = "0.1.89"
anyhow = "1.0"
lru = "0.16"
futures = "0.3"
futures-util = "0.3"
bytes = "1.10"

# Additional web APIs for enhanced client functionality
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "Headers",
    "HtmlElement", 
    "Navigator",
    "Request",
    "RequestInit", 
    "RequestMode",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Storage",
    "StorageManager",
    "Window",
    "Location"
] }
rexie = "0.5"  # For IndexedDB
tracing = "0.1"
thiserror = "2.0"
cid = { version = "0.11.1", features = ["alloc", "std", "serde"] }

# WASM-first tokio configuration (sync feature only)
tokio = { version = "1.47", default-features = false, features = ["sync"] }
wasm-bindgen-test = "0.3"

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "sync", "rt"] }

[features]
default = ["web"]
web = []
