[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true, features = ["web"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "sync", "time"] }

[features]
default = ["web"]
web = ["dioxus/web"]
